<resources>
    <string name="app_name">MiD</string>
    <string name="action_settings">Settings</string>
    <string name="cards">Cards</string>
    <string name="more">More</string>
    <string name="requests">Requests</string>
    <string name="header_text">SeamlessViewpagerHeader offers a Viewpager with a scrollable header, like Android Lollipop Contact.</string>
    <string name="empty_text">Empty</string>
    <string name="tab_country">Country</string>
    <string name="tab_continent">Continent</string>
    <string name="tab_city">City</string>
    <string name="tab_scroll_view">ScrollView</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="select_description">Below is a list of the available forms of identity. To begin, select one and fill in the necessary information requested. The information will be saved for later use and will be available for validation at that point.</string>
    <string name="profile_prompt">Select A Profile</string>
    <string name="login">Login</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="default_server_address">http://10.0.2.2:8080</string>
    <string name="title_gallery_storage">Default Server Address</string>
    <string name="key_server_address">key_server_address</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">A developer with a goal to give the power of a user\'s identity back to them</string>
    <string name="app_version">0.1</string>
    <string name="title_version">Version</string>
    <string name="title_git">Gitlab Repository</string>
    <string name="summary_git">View the code behind the magic</string>
    <string name="url_git">https://gitlab.computing.dcu.ie/mcneilc2/2018-ca400-mcneilc2</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_feedback">Got any queries? Get in touch!</string>


</resources>
